--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "electron-store": "^8.2.0",
+    "jotai": "^2.12.4",
     "lodash": "^4.17.21",
     "lucide-react": "^0.507.0",
     "react-hook-form": "^7.56.3",
