--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@radix-ui/react-checkbox": "^1.3.1",
     "@radix-ui/react-dialog": "^1.1.13",
     "@radix-ui/react-label": "^2.1.6",
-    "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/vite": "^4.1.5",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
@@ -37,6 +37,7 @@
     "jotai": "^2.12.4",
     "lodash": "^4.17.21",
     "lucide-react": "^0.507.0",
+    "react-day-picker": "^9.7.0",
     "react-hook-form": "^7.56.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.5",
